fix: resolve contrast issues and add pointer cursor on links

--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -3925,6 +3925,7 @@ textarea.form-control-lg {
   padding: 0.5rem 1rem;
   color: #0d6efd;
   text-decoration: none;
+  cursor: pointer;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -6091,7 +6092,10 @@ textarea.form-control-lg {
   height: 2rem;
   background-repeat: no-repeat;
   background-position: 50%;
-  background-size: 100% 100%;
+  background-size: 80% 80%;
+  padding: 20px;
+  background-color: #000;
+  border-radius: 50%;
 }
 
 /* rtl:options: {
@@ -6118,11 +6122,15 @@ textarea.form-control-lg {
   z-index: 2;
   display: flex;
   justify-content: center;
-  padding: 0;
   margin-right: 15%;
-  margin-bottom: 1rem;
   margin-left: 15%;
   list-style: none;
+  background-color: #000;
+  opacity: 0.5;
+  width: fit-content;
+  margin: 1rem auto;
+  border-radius: 10px;
+  padding: 0 10px;
 }
 .carousel-indicators [data-bs-target] {
   box-sizing: content-box;
